# inverse_kinematics

./: .gitignore  README.md
Exemples/bras_2ddl/ddl2_raspb/: Cargo.toml
exemples/: 2dof_launcher.py  3dof_launcher.py
exemples/2dof_arm/src/commande/: package.xml
exemples/2dof_arm/src/commande/commande/: commande.py
exemples/3dof_arm/src/command/: package.xml  setup.py
exemples/3dof_arm/src/command/command/: command.py
exemples/3dof_arm/src/messages/msg/: MotorsAngles.msg
exemples/3dof_arm/src/motors_ctr/: package.xml
exemples/3dof_arm/src/motors_ctr/src/: main.rs
exemples/4dof_arm/: 4dof_launcher.py
exemples/4dof_arm/src/command/: package.xml  setup.py
exemples/4dof_arm/src/command/command/: command.py  levenberg.py
exemples/4dof_arm/src/messages/: package.xml
exemples/4dof_arm/src/motors_ctr/: CMakeLists.txt
exemples/4dof_arm/src/motors_ctr/src/: main.rs
exemples/4dof_arm_bis/: 4dof_bis_launcher.py
exemples/4dof_arm_bis/src/command/: package.xml  setup.py
exemples/4dof_arm_bis/src/motors_ctr/: Cargo.toml  package.xml
exemples/4dof_arm_bis/src/motors_ctr/src/: main.rs
exemples/bras_2ddl/: 2ddl_launcher.py
exemples/bras_2ddl/src/commande/: setup.cfg  setup.py
exemples/bras_2ddl/src/commande/commande/: commande.py
exemples/bras_2ddl/src/launcher/: 2ddl_launcher.py
exemples/bras_2ddl/src/messages/msg/: MotorsAngles.msg
exemples/bras_3dof/: 3dof_launcher.py
exemples/bras_3dof/src/command/: package.xml  setup.py
exemples/bras_3dof/src/messages/: CMakeLists.txt
exemples/classic/: 4dof_bis_launcher.py
exemples/classic/src/command/: setup.py
exemples/src/command/command/: four_dof_com.py  three_dof_com.py
inverse-kinetics/embarque/bras_3ddl/: Cargo.toml
inverse-kinetics/src/: 2_dof.md  3_dof.md  3_dof_rust.md  Introduction.md  Methode.md  Organisation.md  SUMMARY.md
livre/: .gitignore  book.toml
livre/book/: 2_dof.html  3_dof.html  3_dof_python.html  3_dof_rust.html  404.html  4_dof.html  5_dof.html  Introduction.html  Methode.html  Organisation.html  index.html  print.html  searchindex.js  searchindex.json
livre/src/: 2_dof.md  3_dof.md  3_dof_python.md  4_dof.md  5_dof.md  Introduction.md  Methode.md  Organisation.md  SUMMARY.md  code_2_dof.md  code_3_dof.md  code_4_dof.md  code_4_dof_levenberg.md  levenberg.md
livre/src/drawio/: 2dof_luna_arm.drawio  3dof_luna_arm.drawio  4dof_luna_arm.drawio
(+12 files in other folders)
