<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>motors_ctr</name>
  <version>0.0.1</version>
  <description>control all the motors of a 2 dof arm robot</description>
  <maintainer email="clement.pene@sii.fr">Clement Pene</maintainer>
  <license>MIT</license>
  <author>Clement Pene</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rcl</build_depend>
  <build_depend>messages</build_depend>
 
  <exec_depend>rcl</exec_depend>
  <exec_depend>messages</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>