<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>command</name>
  <version>0.0.1</version>
  <description>Command package to control a 4 dof robotic arm from (x, y, z) input</description>
  <maintainer email="pene.clement@gmail.com">clem-irwt</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>messages</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>sympy</exec_depend>
  <exec_depend>math</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
