[package]
name = "motors_ctr"
version = "0.1.0"
authors = ["Clement Pene <clement.pene@sii.fr>"]
edition = "2021"

# We use a custom profile to keep colcon
# separate from "normal" rust building.
[profile.colcon]
inherits = "release"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r2r = "0.7.0"
futures = "0.3.15"
tokio = { version = "1", features = ["full"] }
linux-embedded-hal = "0.2.2"
sna41-motorshield = {git = "https://github.com/SII-Public-Research/sna41-motorshield.git", branch= "main"}
